Link color update
- New portfolio link in menu (level 2)

--- a/css/style.css
+++ b/css/style.css
@@ -27,8 +27,8 @@ CSS Stylesheet for philboivin.com
 
 --color-body-bg: #fff;
 --color-body-txt: #333;
---color-body-a: #000;
---color-body-a-hover: #333;
+--color-body-a: #003399;
+--color-body-a-hover: #0033CC;
 
 --color-menu-a: #000;
 --color-menu-a-hover: #666;
