--- a/css/style.css
+++ b/css/style.css
@@ -28,7 +28,7 @@ CSS Stylesheet for philboivin.com
 --color-body-bg: #fff;
 --color-body-txt: #333;
 --color-body-a: #3366cc;
---color-body-a-hover: #6699ff;
+--color-body-a-hover: #3366cc;
 
 --color-menu-a: #000;
 --color-menu-a-hover: #666;
