--- a/css/style.css
+++ b/css/style.css
@@ -32,13 +32,14 @@ CSS Stylesheet for philboivin.com
 --color-body-a: #3366cc;
 --color-body-a-hover: #3366cc;
 
---color-menu-a: #666;
---color-menu-a-hover: #333;
---color-menu-hamburger: #ccc;
+--color-menu-a: #006699;
+--color-menu-a-hover: #0066CC;
+
+/*--color-menu-hamburger: #ccc;
 --color-menu-x: #999;
 --color-menu-bg: #eee;
 --color-menu-line: #999;
-
+*/
 --color-sub-menu-li: #333;
 --color-sub-menu-border: #ccc;
 --color-sub-menu-a-hover: #888;
