--- a/css/style.css
+++ b/css/style.css
@@ -32,8 +32,8 @@ CSS Stylesheet for philboivin.com
 --color-body-a: #3366cc;
 --color-body-a-hover: #3366cc;
 
---color-menu-a: #006699;
---color-menu-a-hover: #0066CC;
+--color-menu-a: #3366cc;
+--color-menu-a-hover: #3366cc;
 
 /*--color-menu-hamburger: #ccc;
 --color-menu-x: #999;
