--- a/css/style.css
+++ b/css/style.css
@@ -3,10 +3,10 @@ CSS Stylesheet for philboivin.com
 /**********************************/
 
 :root {
-  --body-font: "helvetica";
-  --menu-font: "helvetica";
+  --body-font: "arial";
+  --menu-font: "arial";
   --logo-font: "georgia";
-  --h-font: "helvetica";
+  --h-font: "arial";
 
   --logo-font-size: 1.6em;
   --form-font-size: 1em;
@@ -77,6 +77,7 @@ body {
   display: grid;
   grid-template-columns: 100%;
   grid-template-areas: "header" "main" "footer";
+  letter-spacing: 0.7px;
 }
 h1 {
   font-size: var(--h1-font-size);
@@ -126,11 +127,11 @@ main p {
   font-size: 1em;
 }
 ul {
-  padding: 10px 0 0 15px;
+  padding: 0 0 0 15px;
 }
 li {
   color: var(--color-li);
-  padding: 2px 0;
+  padding: 3px 0;
 }
 
 header {
