--- a/css/style.css
+++ b/css/style.css
@@ -89,7 +89,6 @@ h1 {
 } 
 h2 {
   font-size: var(--h2-font-size);
-  /* margin: 18px 0 10px 0; */
   margin: 12px 0;
   font-family: var(--h-font);
   font-weight: normal;
@@ -126,7 +125,7 @@ main {
 main p {
   line-height: 1.4;
   margin: 15px 0;
-  font-size: 1em;
+  font-size: var(--text-font-size);
 }
 ul {
   padding: 0 0 0 15px;
@@ -134,6 +133,7 @@ ul {
 li {
   color: var(--color-li);
   padding: 3px 0;
+  font-size: var(--text-font-size);
 }
 
 header {
@@ -141,8 +141,6 @@ header {
   grid-area: header;
   display: grid;
   grid-template-areas: "header-content";
-  /* min-height: 80px; */
-  /* background-color: #ccc; */
 }
 
 #header-content {
@@ -150,7 +148,6 @@ header {
   text-align: left;
   margin: 60px auto 10px auto;
   width: var(--content-width);
-  /* font-size: var(--menu-font-size);  */
   color: var(--color-footer-txt);
 }
 
@@ -214,7 +211,6 @@ header {
 
 .row {
   display: flex;
-  /* padding: 10px 0; */
   padding: 25px 0;
 }
 .col {
