--- a/css/style.css
+++ b/css/style.css
@@ -294,8 +294,8 @@ textarea {
   width: 24px;
   height: 24px;
   padding: 2px;
-  background: red;
-  color: white;
+  background: #ff0000;
+  color: #fff;
   text-align: center;
   font-size: 16px;
   display: inline-block;
